# wdttg-tui

./: .gitignore  Cargo.toml  README.md
crates/wdttg-core/: Cargo.toml
crates/wdttg-core/src/: error.rs  lib.rs  time_utils.rs
crates/wdttg-core/src/config/: loader.rs  mod.rs  settings.rs
crates/wdttg-core/src/model/: client.rs  date_range.rs  entry.rs  filter.rs  mod.rs  report.rs
crates/wdttg-core/src/reporting/: aggregator.rs  export.rs  mod.rs
crates/wdttg-core/src/storage/: cache.rs  file_manager.rs  mod.rs  parser.rs  serializer.rs
crates/wdttg-core/src/validation/: entry_validator.rs  mod.rs  overlap.rs
crates/wdttg-mcp/: Cargo.toml
crates/wdttg-mcp/src/: helpers.rs  lib.rs  params.rs  server.rs
crates/wdttg-mcp/tests/: integration.rs
crates/wdttg-tui/: Cargo.toml
crates/wdttg-tui/src/: action.rs  app.rs  event.rs  input.rs  main.rs  theme.rs
crates/wdttg-tui/src/ui/: help.rs  mod.rs
crates/wdttg-tui/src/ui/entry_form/: mod.rs  render.rs  state.rs
crates/wdttg-tui/src/ui/manage/: mod.rs  render.rs  state.rs
crates/wdttg-tui/src/ui/reports/: mod.rs  render.rs  state.rs
crates/wdttg-tui/src/ui/timeline/: mod.rs  render.rs  state.rs
docs/: index.html
