[package]
name = "wdttg-mcp"
version = "0.4.0"
edition = "2024"

[dependencies]
wdttg-core = { path = "../wdttg-core" }
rmcp = { version = "1.3", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
